--- a/Praktika_31_10/App.config
+++ b/Praktika_31_10/App.config
@@ -20,4 +20,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-20.3460.0.52" newVersion="20.3460.0.52" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
